# Step-Type-Prediction---EEG

./: .gitignore  CHANGELOG.md  COMMIT_RECIPE.md  EEG_ML_Pipeline_Sources.docx  Makefile  README.md  REORG_PROPOSAL.md  SCREENING_RESULTS.md  SCRIPT_GUIDES.md  WORKFLOW.md  compass_artifact_wf-b5552cd0-3e8f-4ab8-8e23-e856e5bebc29_text_markdown.md  pyproject.toml  requirements.txt  robocopy_beast_OD_up.bat  robocopy_download.bat  robocopy_home_pc_OD_up.bat  robocopy_upload.bat  run.py  testing_participants.txt
01_preprocessing/: CNV_epoch_extraction.py  SRC_writer.py
02_models/R/: CNV_XGB_ch.Rmd  CNV_model.R
02_models/archive/: CNV_ML.py  CNV_ML_2.py  CNV_ML_3.1.py  CNV_ML_3.2.py  CNV_ML_3.3.py  CNV_ML_3.4.1.py  CNV_ML_3.4.py  CNV_ML_3.py  CNV_ML_draft.py  VERSIONS.md
02_models/lstm/: CNV_LSTM_3.py
02_models/svm/: CNV_ML_SVM_1.py
02_models/xgboost/: CNV_XGB_4.3.py
03_visualization/R/: ML_vis_1.R  ML_vis_gen.R
_repo_export/: NEXT_STEPS.md  step-type-prediction-eeg.bundle
analysis_R/: README.md
configs/: README.md  cnn.yaml  default.yaml  eegnet.yaml  express.yaml  features_rich.yaml  lightning.yaml  local.yaml.example  quick.yaml  riemannian.yaml  single.yaml  smoke.yaml
configs/overrides/: P01.yaml  (+34 more)
data/: README.md
sandbox/: test.py
scripts/: 00_preflight.py  01_preprocess.py  02_source_localize.py  03_extract_features.py  04_train.py  05_visualize.py  06_compare_runs.py  07_feature_informativeness.py  08_tensor_model_diagnostics.py  run_binning_tuning.ps1  run_screening.ps1
tests/: README.md  conftest.py  test_imports.py  test_smoke_pipeline.py
(+82 files in other folders)
